--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -171,21 +171,21 @@ jobs:
         run: |
           set -euo pipefail
           mkdir -p econoplus/public/canadiantire
-          mapfile -d '' data_files < <(find artifacts -type f -name "data.json" -print0)
-
-          if [ "${#data_files[@]}" -eq 0 ]; then
-            echo "No outputs/canadiantire/<storeSlug> directories found under artifacts."
-            echo "Artifacts contents (max depth 4):"
-            find artifacts -maxdepth 4 -print || true
-            exit 1
-          fi
-
-          for json in "${data_files[@]}"; do
+          copied=0
+          while IFS= read -r -d '' json; do
             store_dir="$(dirname "$json")"
             store_slug="$(basename "$store_dir")"
             mkdir -p "econoplus/public/canadiantire/${store_slug}"
             cp -R "${store_dir}/." "econoplus/public/canadiantire/${store_slug}/"
-          done
+            copied=$((copied + 1))
+          done < <(find artifacts -type f -name "data.json" -print0)
+
+          if [ "$copied" -eq 0 ]; then
+            echo "No data.json files found under artifacts."
+            echo "Artifacts contents (max depth 4):"
+            find artifacts -maxdepth 4 -print || true
+            exit 1
+          fi
 
       - name: Debug ECONOPLUS git status
         working-directory: econoplus
