--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -129,16 +129,20 @@ jobs:
     runs-on: ubuntu-latest
     needs: scrape
     steps:
-      - name: Debug ECONOPLUS secret presence
+      - name: Check ECONOPLUS secret presence
+        id: econoplus-secret
         run: |
           if [ -z "${{ secrets.ECONOPLUS }}" ]; then
-            echo "ECONOPLUS secret is missing."
-            exit 1
+            echo "available=false" >> "$GITHUB_OUTPUT"
+            echo "ECONOPLUS secret is missing. Skipping publish steps."
+          else
+            echo "available=true" >> "$GITHUB_OUTPUT"
+            echo "ECONOPLUS secret is present."
           fi
-          echo "ECONOPLUS secret is present."
 
       - name: Checkout ECONOPLUS repository
         uses: actions/checkout@v4
+        if: steps.econoplus-secret.outputs.available == 'true'
         with:
           repository: Olivier-cousineau/econoplus
           token: ${{ secrets.ECONOPLUS }}
@@ -147,18 +151,22 @@ jobs:
 
       - name: Download artifacts
         uses: actions/download-artifact@v4
+        if: steps.econoplus-secret.outputs.available == 'true'
         with:
           path: artifacts
           pattern: canadiantire-shard-*
           merge-multiple: true
 
       - name: Publish Canadian Tire data
+        if: steps.econoplus-secret.outputs.available == 'true'
         run: echo "Publish Canadian Tire data"
 
       - name: Rebuild Canadian Tire product index
+        if: steps.econoplus-secret.outputs.available == 'true'
         run: echo "Rebuild Canadian Tire product index"
 
       - name: Debug artifacts and econoplus content
+        if: steps.econoplus-secret.outputs.available == 'true'
         run: |
           mkdir -p econoplus/public/canadiantire
           echo "List artifacts contents:"
@@ -168,6 +176,7 @@ jobs:
 
       - name: Sync scraper outputs into econoplus repo
         shell: bash
+        if: steps.econoplus-secret.outputs.available == 'true'
         run: |
           set -euo pipefail
           output_dir="econoplus/public/canadiantire"
@@ -216,11 +225,13 @@ jobs:
 
       - name: Debug ECONOPLUS git status
         working-directory: econoplus
+        if: steps.econoplus-secret.outputs.available == 'true'
         run: git status --porcelain
 
       - name: Detect ECONOPLUS changes
         id: econoplus-changes
         working-directory: econoplus
+        if: steps.econoplus-secret.outputs.available == 'true'
         run: |
           if [ -n "$(git status --porcelain)" ]; then
             echo "has_changes=true" >> "$GITHUB_OUTPUT"
@@ -230,7 +241,7 @@ jobs:
 
       - name: Commit & push
         working-directory: econoplus
-        if: steps.econoplus-changes.outputs.has_changes == 'true'
+        if: steps.econoplus-secret.outputs.available == 'true' && steps.econoplus-changes.outputs.has_changes == 'true'
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
