--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -2,68 +2,52 @@ name: Manual scraper run
 
 on:
   workflow_dispatch:
-    inputs:
-      which:
-        description: Choose shard batch to run
-        type: choice
-        options:
-          - A
-          - B
-        default: A
-      shards_total:
-        description: Total number of shards
-        type: string
-        default: "20"
-      shard_split:
-        description: Number of shards in batch A
-        type: string
-        default: "10"
 
 jobs:
   prepare:
     runs-on: ubuntu-latest
     outputs:
-      shards_json: ${{ steps.build-shards.outputs.shards_json }}
-      shards_total: ${{ steps.build-shards.outputs.shards_total }}
+      stores_matrix: ${{ steps.build-matrix.outputs.stores_matrix }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Build shards matrix
-        id: build-shards
+      - name: Build stores matrix
+        id: build-matrix
         run: |
           node - <<'NODE'
           const fs = require("fs");
-          const which = process.env.WHICH || "A";
-          const shardsTotal = Number(process.env.SHARDS_TOTAL || 20);
-          const shardSplit = Number(process.env.SHARD_SPLIT || 10);
-          const start = which === "B" ? shardSplit + 1 : 1;
-          const end = which === "B" ? shardsTotal : shardSplit;
 
-          if (Number.isNaN(shardsTotal) || Number.isNaN(shardSplit)) {
-            throw new Error("Invalid shard inputs.");
-          }
-          if (shardSplit < 1 || shardsTotal < shardSplit) {
-            throw new Error("shard_split must be >= 1 and <= shards_total.");
-          }
-          if (start > shardsTotal) {
-            throw new Error("Batch selection exceeds total shards.");
+          const raw = JSON.parse(
+            fs.readFileSync("data/canadian_tire_stores.json", "utf8")
+          );
+
+          const slugify = (input) => {
+            return String(input || "")
+              .normalize("NFD")
+              .replace(/[\u0300-\u036f]/g, "")
+              .toLowerCase()
+              .replace(/[^a-z0-9]+/g, "-")
+              .replace(/^-+|-+$/g, "")
+              .replace(/-+/g, "-");
+          };
+
+          const stores = raw.slice(0, 4).map((store) => {
+            const storeId = String(store.storeId ?? store.id ?? "");
+            const storeName = String(store.storeName ?? store.city ?? store.name ?? "");
+            const storeSlug = `${storeId}-${slugify(storeName)}`;
+            return { storeId, storeName, storeSlug };
+          });
+
+          if (!stores.length) {
+            throw new Error("Aucun magasin trouvé dans data/canadian_tire_stores.json");
           }
 
-          const shards = [];
-          for (let shard = start; shard <= end; shard += 1) {
-            shards.push({ shard });
-          }
-
-          console.log(`Shard batch ${which}: ${start}..${end} of ${shardsTotal}`);
-          const shardsJson = JSON.stringify({ include: shards });
-          fs.appendFileSync(process.env.GITHUB_OUTPUT, `shards_json=${shardsJson}\n`);
-          fs.appendFileSync(process.env.GITHUB_OUTPUT, `shards_total=${shardsTotal}\n`);
+          console.log("Stores matrix:");
+          console.log(stores);
+          const storesMatrix = JSON.stringify({ include: stores });
+          fs.appendFileSync(process.env.GITHUB_OUTPUT, `stores_matrix=${storesMatrix}\n`);
           NODE
-        env:
-          WHICH: ${{ inputs.which }}
-          SHARDS_TOTAL: ${{ inputs.shards_total }}
-          SHARD_SPLIT: ${{ inputs.shard_split }}
 
   scrape:
     runs-on: ubuntu-latest
@@ -72,7 +56,7 @@ jobs:
     strategy:
       fail-fast: false
       max-parallel: 4
-      matrix: ${{ fromJson(needs.prepare.outputs.shards_json) }}
+      matrix: ${{ fromJson(needs.prepare.outputs.stores_matrix) }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -89,60 +73,23 @@ jobs:
       - name: Install Playwright browsers
         run: npx playwright install chromium
 
-      - name: Select stores for shard
-        run: |
-          node - <<'NODE'
-          const fs = require("fs");
-          const shard = Number(process.env.SHARD);
-          const shardsTotal = Number(process.env.SHARDS_TOTAL);
-          const stores = JSON.parse(
-            fs.readFileSync("data/canadian_tire_stores.json", "utf8")
-          ).map(({ storeId, storeName }) => ({
-            storeId: String(storeId),
-            storeName: String(storeName),
-          }));
-          const selected = stores.filter((_, index) => (index % shardsTotal) === (shard - 1));
-
-          console.log(`Shard ${shard}/${shardsTotal} selected ${selected.length} stores`);
-          for (const store of selected) {
-            console.log(`- ${store.storeId} | ${store.storeName}`);
-          }
-
-          fs.writeFileSync("stores_for_shard.json", JSON.stringify(selected));
-          NODE
-        env:
-          SHARD: ${{ matrix.shard }}
-          SHARDS_TOTAL: ${{ needs.prepare.outputs.shards_total }}
-
-      - name: Run scraper for shard stores
-        run: node scraper_ct.js --storesFile stores_for_shard.json
+      - name: Run scraper for store
+        run: node scraper_ct.js --storeId "${{ matrix.storeId }}" --storeName "${{ matrix.storeName }}"
 
       - name: Upload scraper outputs
         uses: actions/upload-artifact@v4
         if: always()
         with:
-          name: canadiantire-shard-${{ matrix.shard }}
-          path: outputs/
+          name: canadiantire-${{ matrix.storeSlug }}
+          path: public/canadiantire/${{ matrix.storeSlug }}/**
           if-no-files-found: warn
 
-  publish-rebuild-commit:
+  publish-to-econoplus:
     runs-on: ubuntu-latest
     needs: scrape
     steps:
-      - name: Check ECONOPLUS secret presence
-        id: econoplus-secret
-        run: |
-          if [ -z "${{ secrets.ECONOPLUS }}" ]; then
-            echo "available=false" >> "$GITHUB_OUTPUT"
-            echo "ECONOPLUS secret is missing. Skipping publish steps."
-          else
-            echo "available=true" >> "$GITHUB_OUTPUT"
-            echo "ECONOPLUS secret is present."
-          fi
-
       - name: Checkout ECONOPLUS repository
         uses: actions/checkout@v4
-        if: steps.econoplus-secret.outputs.available == 'true'
         with:
           repository: Olivier-cousineau/econoplus
           token: ${{ secrets.ECONOPLUS }}
@@ -151,41 +98,26 @@ jobs:
 
       - name: Download artifacts
         uses: actions/download-artifact@v4
-        if: steps.econoplus-secret.outputs.available == 'true'
         with:
           path: artifacts
-          pattern: canadiantire-shard-*
-          merge-multiple: true
+          pattern: canadiantire-*
 
-      - name: Publish Canadian Tire data
-        if: steps.econoplus-secret.outputs.available == 'true'
-        run: echo "Publish Canadian Tire data"
-
-      - name: Rebuild Canadian Tire product index
-        if: steps.econoplus-secret.outputs.available == 'true'
-        run: echo "Rebuild Canadian Tire product index"
-
-      - name: Debug artifacts and econoplus content
-        if: steps.econoplus-secret.outputs.available == 'true'
+      - name: Debug artifact folders
         run: |
-          mkdir -p econoplus/public/canadiantire
-          echo "List artifacts contents:"
-          find artifacts -maxdepth 4 -print || true
-          echo "Find econoplus public/canadiantire:"
-          find econoplus/public/canadiantire -print || true
+          echo "Liste des dossiers sous artifacts/**/public/canadiantire :"
+          find artifacts -type d -path "*/public/canadiantire/*" -print || true
 
       - name: Sync scraper outputs into econoplus repo
         shell: bash
-        if: steps.econoplus-secret.outputs.available == 'true'
         run: |
           set -euo pipefail
           mkdir -p econoplus/public/canadiantire
 
-          mapfile -t STORE_DIRS < <(find artifacts -type f -name "data.json" -print | xargs -r -n1 dirname | sort -u)
+          mapfile -t STORE_DIRS < <(find artifacts -mindepth 4 -maxdepth 4 -type d -path "*/public/canadiantire/*" -print | sort)
 
           echo "Found ${#STORE_DIRS[@]} store folder(s)"
           if [ "${#STORE_DIRS[@]}" -eq 0 ]; then
-            echo "::error::No store folders found (no data.json under artifacts)."
+            echo "::error::No public/canadiantire store folders found in artifacts."
             exit 1
           fi
 
@@ -201,34 +133,21 @@ jobs:
             fi
           done
 
-          find econoplus/public/canadiantire -maxdepth 3 -type f -print | head -n 200
-
       - name: Debug ECONOPLUS git status
         working-directory: econoplus
-        if: steps.econoplus-secret.outputs.available == 'true'
-        run: git status --porcelain
-
-      - name: Detect ECONOPLUS changes
-        id: econoplus-changes
-        working-directory: econoplus
-        if: steps.econoplus-secret.outputs.available == 'true'
         run: |
-          if [ -n "$(git status --porcelain)" ]; then
-            echo "has_changes=true" >> "$GITHUB_OUTPUT"
-          else
-            echo "has_changes=false" >> "$GITHUB_OUTPUT"
-          fi
+          echo "git status --porcelain"
+          git status --porcelain
 
       - name: Commit & push
         working-directory: econoplus
-        if: steps.econoplus-secret.outputs.available == 'true' && steps.econoplus-changes.outputs.has_changes == 'true'
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add public/canadiantire 2>/dev/null || true
+          git add public/canadiantire
           if [ -n "$(git status --porcelain)" ]; then
-            git commit -m "Update Canadian Tire (4 stores parallel)"
-            git push origin main
+            git commit -m "Update Canadian Tire stores (4 stores) [skip ci]"
+            git push origin HEAD:main
           else
             echo "No changes to commit."
           fi
