--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -76,6 +76,16 @@ jobs:
       - name: Run scraper for store
         run: node scraper_ct.js --storeId "${{ matrix.storeId }}" --storeName "${{ matrix.storeName }}"
 
+      - name: Copy scraper outputs into public folder
+        run: |
+          set -euo pipefail
+          dest="public/canadiantire/${{ matrix.storeSlug }}"
+          mkdir -p "$dest"
+          cp -R outputs/canadiantire/* "$dest/"
+
+      - name: Debug public folder before upload
+        run: find public -maxdepth 4
+
       - name: Upload scraper outputs
         uses: actions/upload-artifact@v4
         if: always()
