Fix sync debug find pipe

--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -158,7 +158,7 @@ jobs:
           done
 
           echo "ECONOPLUS public/canadiantire sample:"
-          find econoplus/public/canadiantire -maxdepth 3 -print | head -n 100
+          (find econoplus/public/canadiantire -maxdepth 3 -print | head -n 100) || true
 
       - name: Debug ECONOPLUS git status
         working-directory: econoplus
